--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "react": "19.2.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
